Fixed issue with icons having edges cut off.

--- a/frontend/src/SocialListItem.css
+++ b/frontend/src/SocialListItem.css
@@ -20,11 +20,13 @@
     align-items: center;
     margin-right: 10px;
     border-radius: 6px;
+    
 }
 
 .icon-image {
     height: 20px;
     width: 20px;
+    border-radius: 0px;
 }
 
 .delete-button {
